src/test/ui/consts/min_const_fn/min_const_fn_dyn.stderr
error[E0723]: trait bounds other than `Sized` on const fn parameters are unstable (see issue #57563)
  --> $DIR/min_const_fn_dyn.rs:9:5
   |
LL |     x.0.field;
   |     ^^^^^^^^^
   |
   = help: add #![feature(const_fn)] to the crate attributes to enable

error[E0723]: trait bounds other than `Sized` on const fn parameters are unstable (see issue #57563)
  --> $DIR/min_const_fn_dyn.rs:12:66
   |
LL | const fn no_inner_dyn_trait_ret() -> Hide { Hide(HasDyn { field: &0 }) }
   |                                                                  ^^
   |
   = help: add #![feature(const_fn)] to the crate attributes to enable

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0723`.
